ro.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: calculator-ro
  namespace: calculator-app
spec:
  template:
    metadata:
      labels:
        app: calculator-app
    spec:
      containers:
      - name: calculator-app
        image: httpd:2.4.56
  selector:
    matchLabels:
      app: calculator-app
  replicas: 10
  strategy:
    canary:
      steps:
      - setWeight: 10
      - pause: {}
