svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-svc
  namespace: calculator
spec:
  selector:
    app: calculator-app
  ports:
    port: 8090
    targetPort: 5000
